--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -15,6 +15,9 @@
           <td><%= reminder.roles.collect {|r| r.name}.join(',') %></td>
           <td><%= Reminder.interval_value_display(reminder.interval,reminder.interval_value) %></td>
           <td class="buttons">
+            <%= link_to_function l(:button_edit),
+                                 "$('reminder-#{reminder.id}-edit').show(); return false;",
+                                 :class => 'icon icon-edit' %>
              <%= link_to_remote(l(:button_delete), { :url => {:controller => 'reminders', :action => 'destroy', :id => reminder},
                                               :method => :post,
                                               :confirm => l(:reminder_delete_confirmation)
@@ -22,11 +25,17 @@
                                                :class => 'icon icon-del')  %>
           </td>
         </tr>
+        <tr id="reminder-<%= reminder.id %>-edit" style="display:none">
+          <td colspan="3"><%= render :partial => 'form', :locals => { :reminder => reminder, :project => @project } %></td>
+        </tr>
       <% end %>
     </tbody>
   </table>
 </div>
 
 <div class="splitcontentright">
-  <%= render :partial => 'form', :object => @reminder %>
+  <fieldset>
+    <legend>New Reminder</legend>
+    <%= render :partial => 'form', :locals => { :reminder => @reminder, :project => @project } %>
+  </fieldset
 </div>
