Do not display 'Cancel' link for new record

--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -22,5 +22,8 @@
       <% end %>
     </p>
     <%= f.submit reminder.new_record? ? l(:add) : l(:save) %>
-    <%= link_to_function l(:button_cancel), "$('reminder-#{reminder.id}-edit').hide(); return false;" %></p>
+
+    <% unless reminder.new_record? %>
+      <%= link_to_function l(:button_cancel), "$('reminder-#{reminder.id}-edit').hide(); return false;" %></p>
+    <% end %>
 <% end %>
