--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,11 +1,11 @@
 <% remote_form_for(reminder, :url => {:action => (reminder.new_record? ? :create : :update), :id => reminder}) do |f| %>
   <%= f.hidden_field :project_id, { :value => project.id } %>
   <p>
-    <%= f.label l(:query) %>
+    <%= f.label l(:query) %>:
     <%= f.select :query_id, queries_for_options(project.id) %>
   </p>
   <p>
-    <%= f.label l(:interval) %>
+    <%= f.label l(:interval) %>:
     <%= f.select :interval, reminders_intervals_for_options, {},
           {:onchange => remote_function(:url  => {:action => "update_interval_values"},
               :with => "'interval='+value +'&reminder_id=#{reminder.new_record? ? 'new' : reminder.id}'")}  %>
@@ -15,11 +15,13 @@
                             :selected_value => reminder.interval_value,
                             :reminder => reminder } %>
     <p>
-      <%= f.label l(:roles) %>
+      <%= f.label l(:roles) %>:<br />
+	  <p>
       <% Role.find_all_givable.each do |role| %>
         <%= check_box_tag(role.name.downcase, role.id, reminder.roles.include?(role)) %>
-        <%= label_tag(role.name.downcase, role.name) %>
+        <%= label_tag(role.name.downcase, role.name) %><br />
       <% end %>
+	  </p>
     </p>
     <%= f.submit reminder.new_record? ? l(:add) : l(:save) %>
 
