Cleaned localization data

--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= l(:caption) %></h2>
+<h2><%= l(:issues_reminder) %></h2>
 <div class="splitcontentleft">
   <table class="list members">
     <thead>
