--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -12,7 +12,7 @@
     <tbody>
       <% @reminders.each do |reminder| %>
         <tr>
-          <td><%= reminder.query.name %></td>
+          <td><%= link_to(h(reminder.query.name), :controller => 'queries', :action => 'edit', :id => reminder.query) %></td>
           <td><%= reminder.roles.collect {|r| r.name}.join(',') %></td>
           <td><%= Reminder.interval_value_display(reminder.interval,reminder.interval_value) %></td>
           <td class="buttons">
