--- a/app/views/reminder_mailer/issues_reminder.html.erb
+++ b/app/views/reminder_mailer/issues_reminder.html.erb
@@ -1,5 +1,7 @@
 <% @queries_data.each do |data| %>
 <% data[1].project = data[0] %>
+<%= "#{data[0].id}: #{User.current.id}"%>
+<%= "#{data[0].name}: #{data[1].name}"%>
 <h1><%= "#{data[0].name}: #{data[1].name}"%></h1>
 <table class="list issues">
   <thead>
