Adding missing > for HTML Tag (Issue #12)

--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -40,5 +40,5 @@
   <fieldset>
     <legend><%= l(:new_reminder) %></legend>
     <%= render :partial => 'form', :locals => { :reminder => @reminder, :project => @project } %>
-  </fieldset
+  </fieldset>
 </div>
