--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,15 +1,16 @@
-<%= remote_form_for(reminder, :url => {:action => (reminder.new_record? ? :create : :update), :id => reminder}) do |f| %>
+<%= form_for(:reminder, :url => {:action => (reminder.new_record? ? :create : :update), :id => reminder}, :remote => true, :method => :put ) do |f| %>
   <%= f.hidden_field :project_id, { :value => project.id } %>
   <p>
-    <%= f.label l(:query) %>:
+    <%= f.label l(:query) %>
     <%= f.select :query_id, queries_for_options(project.id) %>
   </p>
   <p>
     <%= f.label l(:interval) %>:
     <%= f.select :interval, reminders_intervals_for_options, {},
           {:onchange => remote_function(:url  => {:action => "update_interval_values"},
-              :with => "'interval='+value +'&reminder_id=#{reminder.new_record? ? 'new' : reminder.id}'")}  %>
-    </p>
+              :with => "'interval='+value +'&reminder_id=#{reminder.new_record? ? 'new' : reminder.id}'")}  
+    %>
+  </p>
     <%= render :partial => 'interval_values',
                :locals => { :possible_values => Reminder.interval_values_for(reminder.new_record? ? :daily : reminder.interval),
                             :selected_value => reminder.interval_value,
