--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:reminder, :url => {:action => (reminder.new_record? ? :create : :update), :id => reminder}, :remote => true, :method => :put ) do |f| %>
+<%= form_for(:reminder, :url => {:action => (reminder.new_record? ? :create : :update), :id => reminder}, :remote => true, :method => (reminder.new_record? ? :post : :put) ) do |f| %>
   <%= f.hidden_field :project_id, { :value => project.id } %>
   <p>
     <%= f.label l(:query) %>
