--- a/app/views/reminder_mailer/issues_reminder.html.erb
+++ b/app/views/reminder_mailer/issues_reminder.html.erb
@@ -1,22 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
 <% @queries_data.each do |data| %>
-<% data[1].project = data[0] %>
-<h1><%= "#{data[0].name}: #{data[1].name}"%></h1>
-<table class="list issues">
-  <thead>
-    <tr>
-      <% data[1].columns.each do |col| %>
-      <th title="<%= col.caption %>"><%= col.caption %></th>
-      <% end %>
-    </tr>
-  </thead>
-  <tbody>
-    <% data[1].issues(:include => [:assigned_to, :tracker, :priority, :category, :fixed_version]).each do |issue| %>
-      <tr>
-        <% data[1].columns.each do |column| %>
-          <%= content_tag 'td', content_for_column(column, issue) %>
+    <% data[1].project = data[0] %>
+    <h1><%= "#{data[0].name}: #{data[1].name}"%></h1>
+    <table class="list issues">
+        <thead>
+            <tr>
+                <% data[1].columns.each do |col| %>
+                    <th title="<%= col.caption %>"><%= col.caption %></th>
+                <% end %>
+            </tr>
+        </thead>
+        <tbody>
+        <% data[1].issues(:include => [:assigned_to, :tracker, :priority, :category, :fixed_version]).each do |issue| %>
+            <tr>
+                <% data[1].columns.each do |column| %>
+                    <%= content_tag 'td', content_for_column(column, issue) %>
+                <% end %>
+            </tr>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </tbody>
+    </table>
 <% end %>
+</body>
+</html>
