--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -6,9 +6,8 @@
   </p>
   <p>
     <%= f.label l(:interval) %>:
-    <%= f.select :interval, reminders_intervals_for_options, {},
-          {:onchange => remote_function(:url  => {:action => "update_interval_values"},
-              :with => "'interval='+value +'&reminder_id=#{reminder.new_record? ? 'new' : reminder.id}'")}  
+    <%= f.select :interval, reminders_intervals_for_options,:data => {:remote => true, :url  => {:action => "update_interval_values"},
+              :with => "'interval='+value +'&reminder_id=#{reminder.new_record? ? 'new' : reminder.id}'"}  
     %>
   </p>
     <%= render :partial => 'interval_values',
