--- a/app/views/issue_reminders/index.html.erb
+++ b/app/views/issue_reminders/index.html.erb
@@ -18,7 +18,7 @@
             <td class="buttons">
                 <%= link_to_function l(:button_edit), "$('#reminder-#{reminder.id}-edit').show()", :class => 'icon icon-edit' %>
                 <%= link_to l(:button_delete),
-                    {:controller => 'reminders', :action => :destroy, :id => reminder},
+                    {:controller => 'issue_reminders', :action => :destroy, :id => reminder},
                     {:confirm => l(:reminder_delete_confirmation), :method => :delete, :remote => true,
                      :title => l(:button_delete), :class => 'icon icon-del'} %>
             </td>
