--- a/app/views/mail_reminders/_form.html.erb
+++ b/app/views/mail_reminders/_form.html.erb
@@ -7,10 +7,7 @@
   </p>
   <div id="reminder_interval-<%= reminder.new_record? ? 'new' : reminder.id %>">
     <%= f.label l(:interval) %>
-    <%= render :partial => 'interval',
-               :locals => { :possible_values => reminders_intervals_for_options,
-                            :selected_value => reminder.interval,
-                            :reminder => reminder } %>
+    <%= f.select :interval, options_for_select(reminders_intervals_for_options, reminder.interval) %>
   </div>
   <%= render :partial => 'interval_values',
              :locals => { :possible_values => MailReminder.interval_values_for(reminder.new_record? ? :daily : reminder.interval),
